# xfdashboard

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac.in  module.xml
common/: Makefile.am  xfconf-settings.c  xfconf-settings.h
data/: Makefile.am  org.xfce.xfdashboard-settings.desktop.in.in  xfdashboard-autostart.desktop.in.in  xfdashboard-settings.desktop.in.in  xfdashboard.desktop.in.in
data/appdata/: Makefile.am  org.xfce.xfdashboard.metainfo.xml.in  xfdashboard.appdata.xml.in
data/data/: Makefile.am  bindings.xml  preferences.ui
data/icons/: Makefile.am
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/256x256/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/64x64/: Makefile.am
data/icons/96x96/: Makefile.am
data/icons/scalable/: Makefile.am
data/metainfo/: Makefile.am  org.xfce.xfdashboard.metainfo.xml.in
data/themes/: Makefile.am
data/themes/dark/: Makefile.am  xfdashboard.theme.in
data/themes/xfdashboard/: Makefile.am  animations.xml  effects.xml  xfdashboard-secondary.xml  xfdashboard.css  xfdashboard.theme.in  xfdashboard.theme.in.in  xfdashboard.xml
data/themes/xfdashboard-auber/: Makefile.am  animations.xml  effects.xml  xfdashboard-auber.css  xfdashboard-secondary.xml  xfdashboard.css  xfdashboard.theme.in  xfdashboard.theme.in.in
data/themes/xfdashboard-blue/: Makefile.am  xfdashboard-blue.css  xfdashboard-secondary.xml  xfdashboard.css  xfdashboard.theme.in  xfdashboard.theme.in.in  xfdashboard.xml
data/themes/xfdashboard-dark/: Makefile.am  effects.xml  xfdashboard-dark.css  xfdashboard.css  xfdashboard.theme.in  xfdashboard.theme.in.in  xfdashboard.xml
data/themes/xfdashboard-mint/: Makefile.am  xfdashboard-mint.css  xfdashboard.css  xfdashboard.theme.in  xfdashboard.theme.in.in  xfdashboard.xml
data/themes/xfdashboard-moranga/: Makefile.am  xfdashboard-moranga.css  xfdashboard-secondary.xml  xfdashboard.css  xfdashboard.theme.in  xfdashboard.theme.in.in  xfdashboard.xml
data/themes/xfdashboard-wine/: Makefile.am  animations.xml  xfdashboard-wine.css  xfdashboard.css  xfdashboard.theme.in  xfdashboard.theme.in.in  xfdashboard.xml
libxfdashboard/: Makefile.am  action-button.c  action-button.h  actor.c  actor.h  animation.c  animation.h  application-button.c  application-button.h  application-database.c  application-database.h  application-tracker.c  application-tracker.h  application.c  application.h  applications-menu-model.c  applications-menu-model.h  applications-search-provider.c  applications-search-provider.h  applications-view.c  applications-view.h  background.c  background.h  binding.c  binding.h  bindings-pool.c  bindings-pool.h  box-layout.c  box-layout.h  button.c  button.h  click-action.c  click-action.h  collapse-box.c  collapse-box.h  compat.h  core.c  core.h  css-selector.c  css-selector.h  (+127 more)
libxfdashboard/gdk/: window-content-gdk.c  window-content-gdk.h  window-tracker-backend-gdk.c  window-tracker-backend-gdk.h  window-tracker-gdk.c  window-tracker-gdk.h  window-tracker-monitor-gdk.c  window-tracker-monitor-gdk.h  window-tracker-window-gdk.c  window-tracker-window-gdk.h  window-tracker-workspace-gdk.c  window-tracker-workspace-gdk.h
libxfdashboard/x11/: window-content-x11.c  window-content-x11.h  window-tracker-backend-x11.c  window-tracker-backend-x11.h  window-tracker-monitor-x11.c  window-tracker-monitor-x11.h  window-tracker-window-x11.c  window-tracker-window-x11.h  window-tracker-workspace-x11.c  window-tracker-workspace-x11.h  window-tracker-x11.c  window-tracker-x11.h
plugins/: Makefile.am
plugins/autopin-windows/: Makefile.am  autopin-windows.c  autopin-windows.h  plugin.c
plugins/clock-view/: Makefile.am  clock-view-settings.c  clock-view-settings.h  clock-view.c  clock-view.h  plugin.c
plugins/gnome-shell-search-provider/: Makefile.am  gnome-shell-search-provider.c  gnome-shell-search-provider.h  plugin.c
plugins/hot-corner/: Makefile.am  hot-corner-settings.c  hot-corner-settings.h  hot-corner.c  hot-corner.h  plugin.c
plugins/middle-click-window-close/: Makefile.am  middle-click-window-close.c  middle-click-window-close.h  plugin.c
plugins/recently-used-search-provider/: Makefile.am  plugin.c  recently-used-search-provider.c  recently-used-search-provider.h
po/: POTFILES.in  POTFILES.skip  be.po  bg.po  ca.po  da.po  de.po  el.po  es.po  et.po  eu.po  fr.po  gl.po  he.po  id.po  ie.po  it.po  it_IT.po  ja.po  kk.po  ko.po  lt.po  (+14 more)
settings/: Makefile.am  general.c  general.h  main.c  plugins.c  plugins.h  settings.c  settings.h  themes.c  themes.h
src/: Makefile  Makefile.am  actor.c  actor.h  application-button.c  application-button.h  application-entry.c  application-entry.h  application-icon.c  application-icon.h  application.c  application.h  applications-menu-model.c  applications-menu-model.h  applications-search-provider.c  applications-search-provider.h  applications-view.c  applications-view.h  background.c  background.h  binding.c  binding.h  bindings-pool.c  bindings-pool.h  bindings.c  bindings.h  button.c  button.h  click-action.c  click-action.h  collapse-box.c  collapse-box.h  common.c  common.h  css-selector.c  css-selector.h  drag-action.c  drag-action.h  drop-action.c  drop-action.h  (+108 more)
xfdashboard/: Makefile.am  action-button.c  action-button.h  actor.c  actor.h  application-button.c  application-button.h  application-database.c  application-database.h  application-tracker.c  application-tracker.h  application.c  application.h  applications-menu-model.c  applications-search-provider.c  applications-search-provider.h  applications-view.c  applications-view.h  background.c  background.h  binding.c  binding.h  bindings-pool.c  bindings-pool.h  box-layout.c  box-layout.h  button.c  button.h  click-action.c  click-action.h  collapse-box.c  collapse-box.h  css-selector.c  css-selector.h  desktop-app-info.c  desktop-app-info.h  drag-action.c  drag-action.h  drop-action.c  drop-action.h  (+92 more)
(+5 files in other folders)
